# test_apps

./: CMakeLists.txt  README.md  conanfile.py  imgui.ini
misc/: SmallBoard.json  cadaver_ba.yml  identity_pose.json  inm_ba.yml  inm_ba_frieder.yml  inm_ba_k4a_capture.yml  inm_ba_mustafa.yml  registration_config.yml  registration_frieder.yml  shm_tracking_frieder.yml  shm_tracking_mobile.yml
src/: BAProblemLoader.cpp  BAProblemLoader.h  main_bundle_adjustment.cpp  main_ir_tracking.cpp  main_open3d.cpp  main_outside_in_generator.cpp  main_shm.cpp  main_test.cpp
src/util/: YAMLUtil.cpp  YAMLUtil.h
